# uni-mbds-exercises_ch4

./: CMakeLists.txt  Ch4_DevEnv.ioc  README.md
Core/Src/: main.c
